<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/RelativeLayout01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	>
	<TextView 
		android:id="@+id/idDate" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/conception_date"
		/>
	<Button android:id="@+id/idTxtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/idDate" 
            android:text="@string/conception_date"/>
	<TextView 
		android:id="@+id/idTxtColor" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
	    android:layout_below="@+id/idTxtDate" 
		android:text="@string/textColor"
		/>
	<Spinner 
        android:id="@+id/idColorSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/textSpinnerColor"
	    android:layout_below="@+id/idTxtDate" 
	    android:layout_toRightOf="@+id/idTxtColor" 
		android:layout_marginBottom="5dip"  
    	/>
	<TextView 
		android:id="@+id/idTxtTerm" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
	    android:layout_below="@+id/idColorSpinner" 
		android:text="@string/textTerm"
		/>
	<Spinner 
        android:id="@+id/idTermSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/textSpinnerTerm"
	    android:layout_below="@+id/idColorSpinner" 
	    android:layout_toRightOf="@+id/idTxtTerm" 
		android:layout_marginBottom="5dip"  
    	/>
	<Button 
		android:id="@+id/idValid" 
		android:layout_below="@+id/idTermSpinner" 
		android:layout_toRightOf="@+id/idTxtTerm" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/btn_valid"
		/>
	<Button 
		android:id="@+id/idCancel" 
		android:layout_below="@+id/idTermSpinner" 
		android:layout_toRightOf="@+id/idValid" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/btn_cancel"
		/>
</RelativeLayout>
