<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/widget"  
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
		android:layout_marginLeft="3dip" 
    	>
		<TextView
			android:id="@+id/nbMonth"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
    		style="@style/Widget.text"
		    />
		<TextView
			android:id="@+id/txtNbMonth"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="3dip" 
		    android:text="@string/month"
    		style="@style/Widget.text"
		    />
		<TextView
			android:id="@+id/txtOr"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="3dip" 
		    android:text="@string/or"
    		style="@style/Widget.text"
		    />
   	</LinearLayout>
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
		android:layout_marginLeft="3dip" 
    	>
		<TextView
			android:id="@+id/nbWeek"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
    		style="@style/Widget.text"
		    />
		<TextView
			android:id="@+id/txtNbWeek"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="3dip" 
		    android:text="@string/week"
    		style="@style/Widget.text"
		    />
   	</LinearLayout>
	<TextView
		android:id="@+id/txtCountDown"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
		android:text="@string/countDown"
   		style="@style/Widget.text"
    	android:layout_gravity="center_horizontal"
		android:layout_marginLeft="3dip" 
	    />
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
		android:layout_marginLeft="3dip" 
    	>
		<TextView
			android:id="@+id/nbDay"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
    		style="@style/Widget.Day"
		    />
		<TextView
			android:id="@+id/txtNbDay"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="3dip" 
		    android:text="@string/day"
    		style="@style/Widget.Day"
		    />
   	</LinearLayout>
</LinearLayout>
